# lightsemi-rf-test-tool

./: CMakeLists.txt  LICENSE  PortReadThread.cpp  PortReadThread.h  PortWriteThread.cpp  PortWriteThread.h  README.en.md  README.md  SerialPort.cpp  SerialPort.h  lightningsemi.cpp  lightningsemi.h  lightningsemi.ui  main.cpp  serialcontroller.cpp  serialcontroller.h
include/: SerialPort.h  lightningsemi.h
src/: PortReadThread.cpp  PortWriteThread.cpp  SerialPort.cpp  lightningsemi.cpp
